@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.5</version>
+		<version>3.1.7</version>
 	</parent>
 
 	<properties>
@@ -25,13 +25,13 @@
 		<microprofile.version>5.0</microprofile.version>
 
 		<!-- https://github.com/OpenLiberty/ci.maven -->
-		<liberty-maven-plugin.version>3.9</liberty-maven-plugin.version>
+		<liberty-maven-plugin.version>3.10</liberty-maven-plugin.version>
 		<liberty-runtime.version>23.0.0.2</liberty-runtime.version>
 		<liberty.loose-application>true</liberty.loose-application>
 
 		<!-- https://codehaus-cargo.github.io/cargo/Maven+3+Plugin+Reference+Guide.html -->
 		<!-- https://codehaus-cargo.github.io/cargo/Configuration+properties.html -->
-		<cargo-maven-plugin.version>1.10.7</cargo-maven-plugin.version>
+		<cargo-maven-plugin.version>1.10.11</cargo-maven-plugin.version>
 
 		<cargo-wildfly-runtime>wildfly28x</cargo-wildfly-runtime>
 		<cargo-wildfly-script.dir>${project.basedir}/src/main/wildfly</cargo-wildfly-script.dir>
@@ -54,12 +54,11 @@
 
 		<!-- Odds and Ends -->
 		<mp-ext-openapi-ui.version>2.0.0</mp-ext-openapi-ui.version>
-		<nimbus.version>9.31</nimbus.version>
+		<nimbus.version>9.37.3</nimbus.version>
 
 		<!-- Testing support -->
-		<arquillian.version>1.7.2.Final</arquillian.version>
-		<arquillian-drone.version>3.0.0-alpha.7</arquillian-drone.version>
-		<resteasy.version>6.2.4.Final</resteasy.version>
+		<arquillian.version>1.8.0.Final</arquillian.version>
+		<resteasy.version>6.2.6.Final</resteasy.version>
 	</properties>
 
 	<dependencies>
@@ -251,13 +250,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.jboss.arquillian.extension</groupId>
-				<artifactId>arquillian-drone-bom</artifactId>
-				<version>${arquillian-drone.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -335,15 +327,6 @@
 									<test.users.enabled>true</test.users.enabled>
 								</systemProperties>
 							</container>
-							<configuration>
-								<properties>
-									<cargo.start.jvmargs>
-										--add-opens java.base/java.lang=ALL-UNNAMED
-										--add-opens java.base/java.util=ALL-UNNAMED
-										--add-opens java.base/java.io=ALL-UNNAMED
-									</cargo.start.jvmargs>
-								</properties>
-							</configuration>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -380,22 +363,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<!-- TomEE test cases need this module setting -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<systemPropertyVariables>
-						<browser>phantomjs</browser>
-					</systemPropertyVariables>
-					<argLine>
-						--add-opens java.base/java.lang=ALL-UNNAMED
-						--add-opens java.base/java.util=ALL-UNNAMED
-						--add-opens java.base/java.io=ALL-UNNAMED
-						--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
 			<plugin>
 				<!-- Liberty wants DataSource classes in app server classpath. See server.xml -->
 				<!-- In a real project, you'll re-factor this into modules. -->
